fix codeblock padding on small devices

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -28,6 +28,5 @@ header {
 @media (max-width: 850px) {
   pre {
     width: 90%;
-    padding: 0;
   }
 }
